<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayoutItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <TextView
        android:id="@+id/TxtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TxtCelular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/celular" />

    <TextView
        android:id="@+id/TxtLocalEVG"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/evangelizado" />
</LinearLayout>