<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayoutEVG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10sp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15sp"
                        android:text="@string/editar_mensagens_padr_es"
                        android:textColor="@color/lblCards"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/L_MsgWPP"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/EdtMsgWPP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mensagem_whatsapp"
                            android:inputType="textMultiLine|textFilter"
                            android:lines="8" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/use_meunome_e_nomedojovem_para_que_o_app_substitua_os_dados_corretamente"
                            android:textSize="12sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/L_MsgSMS"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/EdtMsgSMS"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mensagem_sms"
                            android:lines="8" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/use_meunome_e_nomedojovem_para_que_o_app_substitua_os_dados_corretamente"
                            android:textSize="12sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/BtnSalvar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@color/fju_vermelho"
                        android:text="@string/salvar"
                        android:textColor="@android:color/white" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!--<include layout="@layout/evg_card"></include>-->
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
