<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/L_Nome"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EdtNome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nome"
                        android:inputType="textPersonName"
                        android:maxLength="11" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/L_Email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EdtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress"
                        android:maxLength="100" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/L_Celular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EdtCelular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/celular"
                        android:inputType="phone"
                        android:maxLength="11" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/L_Senha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/L_ConfSenha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <Spinner
                    android:id="@+id/cmbIgrejas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:spinnerMode="dialog" />

                <Spinner
                    android:id="@+id/cmbTribo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20sp"
                    android:entries="@array/TribosProfile"
                    android:spinnerMode="dialog" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="É atalaia?" />

                    <RadioButton
                        android:id="@+id/BtnAtalaiaSim"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sou_atalaia" />

                    <RadioButton
                        android:id="@+id/BtnAtalaiaNao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/n_o_sou_atalaia" />
                </RadioGroup>


                <Button
                    android:id="@+id/BtnSalvar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:background="@color/fju_vermelho"
                    android:text="@string/salvar"
                    android:textColor="@color/white" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</ScrollView>